css/common.css
html.fixed {
  position: fixed;
  overflow-y: scroll;
  width: 100%;
}

body {
  /* 제일먼저 로보토 적용, 로보토 안되면 노토산스, 그다음 산세리프로 적용한다 */
  font-family: "Roboto", "Noto Sans KR", sans-serif;
  font-size: 16px;
  line-height: 1;
  word-break: keep-all;
  color: #1D1D1D;
  /* 한글의 경우 단어 단위로 브레이크를 하기 어려움, 워드브레이크를 keep-all로 해주면 한글도 단어단위로 브레이크 됨 */
}

a {
  text-decoration: none;
  color: #1D1D1D;
}

.inner {
  position: relative;
}

/* Header */
header {
  background-color: #3A3A3A;
}

header .inner {
  max-width: 1020px;
  margin: 0 auto;
}

header ul.menu {
  display: flex;
  height: 44px;
  justify-content: space-between;
}

header ul.menu > li {
  display: flex;
  position: relative;
  transition: .4s;
}

header ul.menu > li > a {
  padding: 0 10px;
  font-size: 11px;
  display: flex;
  align-items: center;
  color: #f5f5f5;
  opacity: .8;
}

header ul.menu > li.apple-logo > a,
header ul.menu > li.search-starter > a,
header ul.menu > li.basket-starter > a {
  /* 접근성때문에 html에서 메뉴의 이름을 지우는게 아니라
  텍스트인덴트를 이용해서 화면에서 보이지 않게 옮겨줘야한다 */
  text-indent: -9999px;
  width: 14px;
  background-repeat: no-repeat;
  background-position: center 13px;
}

header ul.menu > li.apple-logo > a {
  background-image: url("../images/header_apple.svg");
}

header ul.menu > li.search-starter > a {
  background-image: url("../images/header_search.svg");
}

header ul.menu > li.basket-starter > a {
  background-image: url("../images/header_bag.svg");
}

header ul.menu > li > a:hover {
  opacity: 1;
}

/* Header / Menu / Basket */
header .basket {
  width: 290px;
  padding: 10px 20px;
  border: 1px solid #D2D2D2;
  border-radius: 10px;
  box-sizing: border-box;
  /* 패딩 넣어줬으니까 290보다 커지는데 그거 커지지 말라고 border-box 넣어줌 */
  background-color: #fff;
  position: absolute;
  /* 상단의 li 태그에 relative 추가해줘 */
  top: calc(100% + 4px);
  right: -6px;
  visibility: hidden;
  /* display: none; */
  transition: .4s;
  opacity: 0;
}

header .basket.show {
  /* display: block; */
  visibility: visible;
  opacity: 1;
}

header .basket .arrow {
  width: 20px;
  height: 10px;
  position: absolute;
  top: -10px;
  right: 12px;
  overflow: hidden;
}

header .basket .arrow::before {
  content: "";
  width: 12px;
  height: 12px;
  border: 1px solid #D2D2D2;
  background-color: #fff;
  transform: rotate(45deg);
  transform-origin: 0 0;
  position: absolute;
  top: 0;
  left: 50%;
}

header .basket .message {
  padding: 30px 0;
  font-size: 13px;
  color: #6E6E6E;
  text-align: center;
}

header .basket ul {
  margin-top: 10px;
}

header .basket ul li {
  border-top: 1px solid #D2D2D2;
}

header .basket ul li a {
  display: block;
  padding: 14px;
  color: #0071E3;
}

header .basket ul li a:hover {
  text-decoration: underline;
}

/* Header / Search */
header .search-wrap {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  visibility: hidden;
  opacity: 0;
  transform: .4s;
}

header .search {
  max-width: 680px;
  margin: 0 auto;
  position: relative;
}

header .search .shadow {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, .4);
}

header .search .textfield {
  position: relative;
}

header .search input {
  width: 100%;
  height: 44px;
  padding: 0 40px;
  border: none;
  outline: none;
  box-sizing: border-box;
  background-color: transparent;
  font-size: 17px;
  color: #fff;
}

header .search .search-icon, 
header .search .search-closer { 
  width: 40px;
  height: 44px;
  background-repeat: no-repeat;
  background-position: center;
  position: absolute;
  opacity: .4;
}

header .search .search-icon {
  background-image: url("../images/header_search.svg");
  top: 0;
  left: 0;
  cursor: pointer;
}

header .search .search-closer {
  background-image: url("../images/header_close.svg");
  top: 0;
  right: 0;
}

header .search .search-closer:hover {
  opacity: 1;
}

header .search .autocompletes {
  width: 100%;
  padding: 26px 40px 20px;
  border-radius: 0 0 18px 18px;
  box-sizing: border-box;
  background-color: #fff;
  position: absolute;
  top: 44px;
  left: 0;
}

header .search .autocompletes h3 {
  font-size: 12px;
  color: #626262;
  margin-bottom: 12px;
}

header .search .autocompletes ul li a {
  display: block;
  margin: 0 -14px;
  padding: 10px 0 10px 30px;
  font-size: 14px;
  cursor: pointer;
}

header .search .autocompletes ul li:hover a {
  background-color: #f5f5f5;
  color: #0071E3;
}

header .search input,
header .search .search-icon,
header .search .autocompletes h3,
header .search .autocompletes li {
  transition: .6s;
  transform: translate(100px, 0);
}

header.searching ul.menu > li {
  opacity: 0;
  transform: scale(.7);
}

header.searching .search-wrap {
  visibility: visible;
  opacity: 1;
  transition-delay: .2s;
}

header.searching .search input,
header.searching .search .search-icon,
header.searching .search .autocompletes h3,
header.searching .search .autocompletes li {
  transition-delay: .2s;
  transform: translate(0, 0);
}

